changed errored address

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,6 @@
 - title: Donate
   href: "https://flattr.com/profile/alexanderussell"
   external: true
-- title: Alex Who?
-  href: "http://alexanderussell.org"
+- title: Who?
+  href: "https://jennybehan.github.io"
   external: true
