Modified basic design & update posts for past week

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "Front-end engineering blog | jennybe"
+name:               "Front end engineering blog"
 
 author:
   facebook:         jennybe0117
