--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,8 @@ disqus:
 # URL
 url:                "https://jennybeblog.github.io" # the base hostname & protocol for your site
 # url:                "http://localhost:4000" # use this url when you develop
-baseurl:            "/master" # the subpath of your site, e.g. /blog
+# baseurl:            "/master" # the subpath of your site, e.g. /blog
+baseurl:            ""
 
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
