--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 name:               "Jennybe / Front-end engineering"
 
 author:
-  facebook:         jennybe0117
+  # facebook:         jennybe0117
   # youtubeUser:      your-id
   # youtubeChannel:   your-id
   # twitter:          your-id
-  github:           jennybehan
+  # github:           jennybehan
   # stackoverflow:    your-id
   # quora:            your-id
   # linkedin:         your-id
